mobile nav-bar fixed (z-index)

--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ nav {
         width: 50%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
+        z-index: 3;
     }
     .nav-links li{
         opacity: 0;
@@ -141,7 +142,7 @@ nav {
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.6);
-    z-index: 9;
+    z-index: 1;
 }
 .slides img{
     width: 100%;
@@ -155,7 +156,7 @@ nav {
     transform: translate(-50% ,-50%);
     width: 100%;
     text-align: center;
-    z-index: 11;
+    z-index: 2;
     color: white;
     font-weight: 600;
 }
